# cookiecutter-caproto-ioc

./: .pre-commit-config.yaml  README.rst  cookiecutter.json
docs/source/: getting-started.rst
hooks/: post_gen_project.sh
{{ cookiecutter.folder_name }}/: .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py  {{ cookiecutter.systemd_service }}.service
{{ cookiecutter.folder_name }}/.github/: CODEOWNERS
{{ cookiecutter.folder_name }}/conda-recipe/: meta.yaml
{{ cookiecutter.folder_name }}/docs/source/: api.rst  conf.py  index.rst
{{ cookiecutter.folder_name }}/{{ cookiecutter.import_name }}/: __main__.py  _version.py  {{ cookiecutter.import_name }}.py
